ChangeLog for KNotes
====================


2002/09/28  Michael Brade <brade@kde.org>

    * finally fixed the session management bug (remove the sessionId from
      all notes => KWin will ignore them)

2002/09/26  Michael Brade <brade@kde.org>

    * new version number

2002/09/25  Michael Brade <brade@kde.org>

    * patch from Matthias Kiefer:
        - add DCOP call hideNote()
        - add new action "New Note from Clipboard"
        - nice icon for the "Insert Date" action
        - global shortcuts for "New Note" and "New Note from Clipboard"
    * changed some actions to KStdActions
    * removed the "Notes" sub-menu from the RMB menu

2002/09/24  Michael Brade <brade@kde.org>

    * fixed printing:
        - do not use private Qt headers
        - use the correct font 

2002/09/21  Michael Brade <brade@kde.org>

    * inherit KTextEdit instead of QTextEdit
    * fixed drag and drop of text and URLs
    * fixed changing of font size/family/style

2002/09/10  Michael Brade <brade@kde.org>

    * fixed one more readNumEntry, thanks to Matthias Kiefer 
 
2002/06/17  Wynn Wilkes <wynnw@wilkes.ws>

    * fixed a bug where new notes with the version of 2.2 were seen as old notes
      and were converted which led to bad note config files and a big black screen

    * fixed the note conversion code to use KNOTES_VERSION

2002/05/10  Michael Brade <brade@kde.org>

    * fixed crash on exit due to wrong deletion order
    * fixed #42437: preferences never got saved (whoops!!)

2002/03/08  Michael Brade <brade@kde.org>

    * fixed #38958: Show note color in notes menu

2002/01/23  Michael Brade <brade@kde.org>

    * fixed #36376, #36799: MMB for new note

2002/01/22  Michael Brade <brade@kde.org>

    * fixed #37222: Alt-F4 "deletes" note
    * fixed #37176: ask for confirmation before deleting a note
    * fixed #36374: double click to rename a note
    * email updates

2001/09/09  Michael Brade <brade@informatik.uni-muenchen.de>

    * improved the config dialog